--- a/style.css
+++ b/style.css
@@ -2,3 +2,31 @@
     font-family: "Roboto";
     src: url(font/Roboto-Regular.ttf) format('truetype');
 }
+
+body{
+    width: auto;
+    margin: auto;
+    font-family: 'Roboto', arial;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+}
+
+#logo{
+    margin-left: 90px;
+    margin-top: 30px;
+}
+
+#nav_ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    margin-right: 160px;
+    margin-top: 90px;
+}
+
+.nav_li{
+    margin-right: 30px;
+}
